2007-11-26  Johan Dahlin  <johan@gnome.org>

	* po/LINGUAS: Add swedish here

	* po/sv.po: Fix errors and update translation

	* flumotion/admin/gtk/wizard.py:
	(Wizard.__init__): Don't put state in the class, we have more
	than one subclass of the wizard and we really want the steps
	to be specific to instances, really.

2007-11-26  Michael Smith <msmith@fluendo.com>

	* flumotion/admin/gtk/client.py:
	* flumotion/admin/gtk/wizard.py:
	* flumotion/admin/text/view.py:
	* flumotion/common/bundleclient.py:
	* flumotion/common/keycards.py:
	* flumotion/common/netutils.py:
	* flumotion/common/registry.py:
	* flumotion/common/testsuite.py:
	* flumotion/component/base/admin_gtk.py:
	* flumotion/component/base/watcher.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/feedcomponent.py:
	* flumotion/component/feedcomponent010.py:
	* flumotion/component/misc/httpfile/file.py:
	* flumotion/extern/log/log.py:
	* flumotion/manager/component.py:
	* flumotion/manager/manager.py:
	* flumotion/twisted/pb.py:
	* flumotion/twisted/portal.py:
	* flumotion/twisted/rtsp.py:
	* flumotion/ui/glade.py:
	* flumotion/worker/base.py:
	* flumotion/worker/medium.py:
	* flumotion/worker/worker.py:
	  Documentation fixes to produce fewer epydoc warnings.

2007-11-26  Johan Dahlin  <johan@gnome.org>

	* flumotion/admin/gtk/client.py: 
	* flumotion/admin/gtk/wizard.py:
	Handle WizardCancelled for the ConnectionDialog

2007-11-26  Johan Dahlin  <johan@gnome.org>

	* data/glade/connection-dialog.glade: 
	* flumotion/admin/gtk/connections.py (ConnectionsDialog): 
	Don't connect ::delete-event directly to self.destroy(), 
	create a separate function which calls it in instead

	* po/sv.po: Add swedish translation

	* flumotion/wizard/productionsteps.py (FireWireAudioStep.on_update_output_format)
	(FireWireStep.on_update_output_format): width_corrections is not
	private a class variable.
	(SoundcardStep): Some methods are private now.